--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
          </form>
          <div class="resultado"></div>
       </section>
+      <footer>
+         <a href="https://github.com/abreuitalo" target="_blank"
+            >&copy; abreuitalo</a
+         >
+      </footer>
+
       <script src="js/main.js"></script>
    </body>
 </html>
